THink I fixed a preemptive bug with the banner.
- Pretty sure I fixed a problem that might come up with the banner when
  it could have overlapped what ever would be at the top of the screen.
- I might have to still make it ignore all the padding. We'll see.

--- a/css/banner.css
+++ b/css/banner.css
@@ -1,7 +1,4 @@
 div#banner {
-    position: absolute;
-    top: 0;
-    left: 0;
     background-color: #FFA500;
     width: 100%;
 }
